# 2023-Backend

./: .gitignore
Alpine/: db.sqlite3  manage.py
Alpine/Alpine/: asgi.py  settings.py  urls.py  wsgi.py
Alpine/core/: urls.py  views.py
Alpine/core/templates/: base.html  (+1 more)
Backend Tutorials/Class Based Views/: db.sqlite3
Backend Tutorials/DebugToolbar/: db.sqlite3  manage.py
Backend Tutorials/Groupchat/: .gitignore  db.sqlite3
Backend Tutorials/auth1/: db.sqlite3
Backend Tutorials/basics/: db.sqlite3
Backend Tutorials/django_cutter/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Backend Tutorials/htmx/: db.sqlite3
Backend Tutorials/mysite/: db.sqlite3
Backend Tutorials/wagtail_test/: development.yml  package-lock.json  package.json  production.yml  pyproject.toml  pyrightconfig.json  tsconfig.json
Backend/WAgtail/: Dockerfile  db.sqlite3  manage.py
Backend/mysite/: db.sqlite3
Full Stack Tutorials/: .gitignore
Full Stack Tutorials/LibMan/: manage.py
Manager/: db.sqlite3
Manager/Manager/: settings.py  urls.py
Manager/todolist/: urls.py
Projects/CronJobs/: app.py  manage.py
Projects/Django-Library-Management/: .env  pyproject.toml
Projects/Django-Library-Management/libMan/: asgi.py  settings.py  urls.py  wsgi.py
Projects/Django-Library-Management/libMan/settings/: __init__.py  base.py  local.py
Projects/Manager/: db.sqlite3
Projects/cookiecutter_test/: manage.py
Projects/first-node-app/: app.js
dict/dict/: urls.py
htmx/: db.sqlite3
htmx/accounts/: urls.py  views.py
htmx/htmx/: settings.py  urls.py
(+160 files in other folders)
