[tool.poetry]
name = "django-library-management"
version = "0.1.0"
description = ""
authors = ["CalledSidd <sidharthsidhu12317@gmail.com>"]
readme = "README.md"
packages = [{include = "django_library_management"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
